--- a/Statements/Xambo.ResearchStatement.tex
+++ b/Statements/Xambo.ResearchStatement.tex
@@ -143,12 +143,13 @@ An interesting characteristic of these novel interfaces is their potential suppo
 %\hrulefill
 
 \begin{center}
-{\scriptsize  Anna Xambó •\- Curriculum Vitae •\- Last updated: \today\- •\- %original: Last updated: \today\- •\- 
+{\scriptsize  Anna Xambó •\- Research Statement •\- Last updated: \today\- •\- %original: Last updated: \today\- •\- 
 % ---- PLEASE LEAVE THIS BACKLINK FOR ATTRIBUTION AS PER CC-LICENSE
 Typeset in \href{http://nitens.org/taraborelli/cvtex}{
 %\fontspec{Times New Roman}
 \XeTeX }\\
-% ---- FILL IN THE FULL URL TO YOUR CV HERE
+% ---- FILL IN THE FULL URL TO YOUR CV HERE\input{Xambo.ResearchStatement.tex}
+
 \href{https://github.com/axambo/CV/tree/master/Statements}{https://github.com/axambo/CV/tree/master/Statements}}
 \end{center}
 
