--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -197,7 +197,7 @@ Total Dollar Amount: \$2,517,690.00
 
 \years{05/2016--present}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\
-Total Fundraised Dollar Amount: \$9,050\\[.1cm]
+Total Fundraised Dollar Amount: \$11,450\\[.1cm]
 \years{08/2016--05/2017}\textbf{2016-2017 Academic Year}\\
 Funding body: School of Music, Georgia Tech. \\
 Total Dollar Amount: \$2,500\\[.1cm]
@@ -209,12 +209,14 @@ Total Dollar Amount: \$1,000\\[.1cm]
 Funding body: Women's Resource Center, Georgia Tech. \\
 Total Dollar Amount: \$250\\[.1cm]
 \years{08/2016--11/2016}\textbf{Spring 2017 Actions}\\
+Funding body: School of Music, Georgia Tech. \\
+Total Dollar Amount: \$2,400\\[.1cm]
+Funding body: College of Design Council Diversity, Georgia Tech. \\
+Total Dollar Amount: \$1,500\\[.1cm]
 Funding body: ADVANCE Program, Georgia Tech. \\
 Total Dollar Amount: \$1,000\\[.1cm]
 Funding body: Women's Resource Center, Georgia Tech. \\
 Total Dollar Amount: \$500\\[.1cm]
-Funding body: College of Design Council Diversity, Georgia Tech. \\
-Total Dollar Amount: \$1,500\\[.1cm]
 Funding body: Digital Media Program, School of Literature, Media, and Communication, Georgia Tech. \\
 Total Dollar Amount: \$300
 
@@ -268,7 +270,11 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
-\years{2017}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
+\years{2017e}\textbf{Xambó, A.}, Shah, P., Roma, G., Freeman, J., Magerko, B. (accepted) “Turn-taking and chatting in collaborative music live coding". Audio Mostly 2017 conference.\\ 
+\years{2017d}\textbf{Xambó, A.}, Shah, P., Roma, G., Freeman, J., Magerko, B. (accepted) “Turn-taking and chatting in collaborative music live coding". Audio Mostly 2017 conference.\\ 
+\years{2017c}Roma, G., \textbf{Xambó, A.}, Freeman, J. (accepted) “Handwaving: gesture recognition for participatory mobile music". Audio Mostly 2017 conference.\\
+\years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (accepted) “Loop-aware audio recording for the web". Web Audio Conference 2017.\\ 
+\years{2017a}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
 \years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
 \years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and new directions for collaborative live coding in the classroom". In \emph{Proceedings of the International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
 \years{2014}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
@@ -283,6 +289,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
+\years{2017}Xambó, A., Roma, G. (accepted). Participatory action painting with my phone. Web Audio Conference 2017.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven musical language to live coding: a case study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to code through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
 \years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
@@ -292,7 +299,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Position \& Workshop Papers}
 \noindent
 
-\years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (accepted) “Computational challenges of co-creation in collaborative music live coding: an outline".\\ 
+\years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (accepted) “Computational challenges of co-creation in collaborative music live coding: an outline". 2017 Co-Creation Workshop at the International Conference on Computational Creativity.\\ 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a taxonomy for video analysis on collaborative musical tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
 \years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). ``Collaborative music interaction on tabletops: an HCI approach'''. In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
 
@@ -423,9 +430,8 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Collaborative Performances}
 \noindent
-
-\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Wang, S. (in preparation). Transmusicking I.\\
-\years{2017c}Xambó, A. Roma, G. (in preparation). Participatory action painting with my phone.\\
+\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Wang, S. (accepted). Transmusicking I. Audio Mostly 2017.\\
+\years{2017c}Xambó, A. Roma, G. (accepted). Participatory action painting with my phone. Web Audio Conference 2017.\\
 \years{2017}Anna Weisling and Anna Xambó. (May 16, 2017). Beacon. \emph{NIME}. Stengade. Copenhagen, Denmark.\\
 \years{2017}Anna Weisling and Anna Xambó. (February 11, 2017). Beacon. \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
 \years{2012}pulso (Gerard Roma and Anna Xambó). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
@@ -503,19 +509,19 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 
 \years{02/2004--06/2004}Centre de la Imatge i la Technologia Multimèdia, Universitat Politècnica de Catalunya, Terrassa, Barcelona.\\ 
 Course: \emph{Experimental Motion Graphics} (45 h). \# Students: $\sim$15. \\
-Role: Creation of syllabus, creation of content, instruction and assessment.\\
+Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2003--02/2004}BAU Escola de Disseny, Universitat de Vic, Barcelona.\\ 
 Course: \emph{Crossmedia} (45 h). \# Students: $\sim$15. \\
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
-\years{11/1999--06/2003}Media Art Institute Fak d'Art, Barcelona.\\ 
-Course: \emph{Computer Animation} (90 h). \# Students: $\sim$15. \\ 
-Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{11/2003--06/2004}Media Art Institute Fak d'Art, Barcelona.\\ 
 Course: \emph{Digital Compositing with Adobe AfterEffects} (45 h). \# Students: $\sim$10. \\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 Course: \emph{Photography in Motion} (45 h). \# Students: $\sim$10. \\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 Course: \emph{Type in Motion} (45 h). \# Students: $\sim$10.\\
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
+\years{11/1999--06/2003}Media Art Institute Fak d'Art, Barcelona.\\ 
+Course: \emph{Computer Animation} (90 h). \# Students: $\sim$15. \\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.
 
 \subsection*{Professional Courses}
