--- a/Statements/Xambo.TeachingStatement.tex
+++ b/Statements/Xambo.TeachingStatement.tex
@@ -91,7 +91,7 @@ I am used to adapt and deliver teaching content to different groups of students.
 
 My experience includes both lectures and workshops. My lecture-based classes give a theoretical stance of a given topic. Typically, a period of time is allocated for one-to-one or group-to-team discussions on the projects. I also have experience with software-based classes that are practical in nature and taught to students working with their computers. 
 
-My teaching style has been practice and project studio based. This approach aligns with learning from solving real-world problems. I am interested in promoting ownership, agency, and autonomy among students through both teamwork and individual work around their topics of interest. Students take agency of their projects and the professor guides them over the course of their journey.
+My teaching style has been practice and project studio based. This approach aligns with learning from solving real-world problems. I am interested in promoting ownership, agency, and autonomy among students through both teamwork and individual work around their topics of interest. My vision of the future of university-based computing education aligns with using suitable technologies that support both the individual pace of learning as well as collaborative forms of learning. Students take agency of their projects and the professor guides them over the course of their journey. 
 
 My teaching style is interdisciplinary. For example, I co-designed a course for undergraduates, \emph{Crossmedia}. This course promoted work by mixing sound, image, animation, video, and motion graphics. In 2004, we were awarded with a research grant to adapt these contents to preschoolers and grade-schoolers.
 
