--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -433,7 +433,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Wang, S. (August 25, 2017). Transmusicking I. Audio Mostly 2017.\\
+\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). Transmusicking I. Audio Mostly 2017.\\
 \years{2017c}Xambó, A. Roma, G. (August 21, 2017). Hyperconnected Action Painting. Web Audio Conference 2017.\\
 \years{2017}Anna Weisling and Anna Xambó. (May 16, 2017). Beacon. \emph{NIME}. Stengade. Copenhagen, Denmark.\\
 \years{2017}Anna Weisling and Anna Xambó. (February 11, 2017). Beacon. \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
@@ -608,7 +608,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Committee Member / Conference Chair}
 \noindent
 
-\years{2017c}\textsc{Session Chair}. \emph{AM '17}. London.\\
+\years{2017c}\textsc{Session Chair}. \emph{WAC '17}. London.\\
 \years{2017b}\textsc{Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
 \years{2017a}\textsc{Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech Committee}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
