--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -375,6 +375,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Workshops}
 \noindent
 
+\years{2017} \textbf{Xambó, A.} (Forthcoming in October 2017). "Audiovisual Creative Coding Workshop for Girls using P5.js and P5.sound". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
 \years{2013} \textbf{Xambó, A.} (May 2, 2013). "Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
 \years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). "Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
 
@@ -564,6 +565,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \section*{Mentoring}
 \noindent
 
+\years{05/2016--present}As a Co-Chair of the student-led organization \emph{Women in Music Tech} I have been mentoring and advising the female graduate students of this organization, including the Chair of the organization, Léa Ikkache, and the Editor-in-Chief of the newsletter Amruta Vidwans. I have also mentored female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
 
@@ -584,7 +586,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Blogging}
 \noindent
 
-\years{2016--present}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator and Co-Author.\\ 
+\years{2016--present}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Co-Editor, Reviewer and Co-Author.\\ 
 \years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Co-Author. \\ 
 \years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Co-Author.\\
 \years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author.  
@@ -661,7 +663,7 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 \subsection*{Entrepreneurship}
 \noindent
 \years{05/2016--present}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
-Co-Founder and Co-Chair of Women in Music Tech, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
+Co-Founder and Co-Chair of \emph{Women in Music Tech}, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
 \years{02/2004--06/2010}\emph{Nodular Soft}, Barcelona. \\
 Co-Founder of a freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.
 
