--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -96,7 +96,7 @@ email: \href{mailto:anna.xambo@gatech.edu}{anna.xambo@gatech.edu}\\
 
 %%\hrule
 \section*{Current Position}
-\emph{Postdoctoral Fellow}, Center for Music Technology | Digital Media Program, Georgia Institute of Technology (Georgia Tech)
+\emph{Postdoctoral Research Assistant}, Center for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London
 
 %%\hrule
 \section*{Areas of Interest}
@@ -140,7 +140,8 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %%\hrule
 \section*{Employment}
 \noindent
-\years{07/2015--present}\textsc{Postdoctoral Fellow}. Center for Music Technology | Digital Media Program, Georgia Tech. \\
+\years{10/2017--present}\textsc{Postdoctoral Research Assistant}. Center for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London. \\
+\years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology | Digital Media Program, Georgia Tech. \\
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
 %{\small Qualitative data collection and analysis (6 sites), development of research tools and processes, dissemination activities and paper writing of results.}\\
 \years{02/2004--06/2010}\textsc{Co-Founder, Project Manager, Web Designer \& Web Developer}. Nodular Soft. Barcelona. \\
@@ -161,6 +162,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 
 \subsection*{Research Honors \& Awards}
+\years{2017} 2017 NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{10/2010--07/2013}\textsc{Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
 \years{03/2010--06/2010}\textsc{Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
 
