--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -316,40 +316,40 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \noindent
 
-\years{2017} \textsc{Oral Presenter}. (August 24, 2017). "Turn-taking and Chatting in Collaborative Music Live Coding". \emph{AM '17}. London.\\
-\years{2016b} \textsc{Oral Presenter}. (July 2, 2016). "Challenges and New Directions for Collaborative Live Coding in the Classroom". \emph{ICLI 2016}. Brighton, UK.\\
-\years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). "Anna Xambó and Liz Dobson in Conversation". \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
-\years{2015} \textsc{Lightning Talk Speaker}. (August 14, 2015). "EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". \emph{RESPECT 2015}. Charlotte, NC. USA.\\
-\years{2014b} \textsc{Oral Presenter}. (July 1, 2014). "SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". \emph{NIME '14}. London.\\
-\years{2014a} \textsc{Oral Presenter}. (April 30, 2014). "Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{CHI '14}. Toronto, ON, Canada.\\
-\years{2013} \textsc{Oral Presenter}. (November 11, 2013). "Tabletop Tangible Interfaces for Music Performance and Implications for Tabletop Research". \emph{School of Computing}, University of Kent. Kent, UK.\\
-\years{2011b} \textsc{Oral Presenter}. (August 2, 2011). "Multi-touch Interaction Principles for Collaborative Real-time Music Activities: Towards a Pattern Language". \emph{ICMC '11}. Huddersfield, UK.\\
-\years{2011a} \textsc{Oral Presenter}. (July 4, 2011). "Collaborative Music Interaction on Tabletops: An HCI Approach". \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne, UK.\\
-\years{2010} \textsc{Oral Presenter}. (July 23, 2010). "Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{SMC '10}. Barcelona.\\
-\years{2008c} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (October 31, 2008). "Freesound, Sons de Barcelona y Freesound Radio: Proyectos colaborativos alrededor del sonido" (Freesound, Sons de Barcelona \& Freesound Radio: Collaborative Projects around sound). \emph{IV Cicle de Converses d'Antropologia Sonora}, Institució Milá i Fontanals (CSIC). Barcelona.\\
-\years{2008b} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (2008). "Freesound.org, Freesound Radio i Sons de Barcelona" (Freesound.org, Freesound Radio \& Sons de Barcelona"). \emph{Facultat de Belles Arts (Faculty of Fine Arts)}, Universitat de Barcelona. Barcelona.\\
-\years{2008a} \textsc{Panel Member} together with Alsina, A., de Jong, B., Loscos, A. and Roma, G. (September 27, 2008). "Influencia de la tecnología en la evolución de la música y la industria" (Influence of the technology in the evolution of music and industry). \emph{NetAudio}, CCCB. Barcelona. \href{https://www.youtube.com/watch?v=6JlCCvYXrHY}{[video]}\\
-\years{2007}\textsc{Oral Presenter} together with Roma, G. (September 20, 2007). "A Sound Editor with a Tangible Interface". \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
+\years{2017} \textsc{Oral Presenter}. (August 24, 2017). “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{AM '17}. London.\\
+\years{2016b} \textsc{Oral Presenter}. (July 2, 2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". \emph{ICLI 2016}. Brighton, UK.\\
+\years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). “Anna Xambó and Liz Dobson in Conversation". \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
+\years{2015} \textsc{Lightning Talk Speaker}. (August 14, 2015). “EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". \emph{RESPECT 2015}. Charlotte, NC. USA.\\
+\years{2014b} \textsc{Oral Presenter}. (July 1, 2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". \emph{NIME '14}. London.\\
+\years{2014a} \textsc{Oral Presenter}. (April 30, 2014). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{CHI '14}. Toronto, ON, Canada.\\
+\years{2013} \textsc{Oral Presenter}. (November 11, 2013). “Tabletop Tangible Interfaces for Music Performance and Implications for Tabletop Research". \emph{School of Computing}, University of Kent. Kent, UK.\\
+\years{2011b} \textsc{Oral Presenter}. (August 2, 2011). “Multi-touch Interaction Principles for Collaborative Real-time Music Activities: Towards a Pattern Language". \emph{ICMC '11}. Huddersfield, UK.\\
+\years{2011a} \textsc{Oral Presenter}. (July 4, 2011). “Collaborative Music Interaction on Tabletops: An HCI Approach". \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne, UK.\\
+\years{2010} \textsc{Oral Presenter}. (July 23, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{SMC '10}. Barcelona.\\
+\years{2008c} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (October 31, 2008). “Freesound, Sons de Barcelona y Freesound Radio: Proyectos colaborativos alrededor del sonido" (Freesound, Sons de Barcelona \& Freesound Radio: Collaborative Projects around sound). \emph{IV Cicle de Converses d'Antropologia Sonora}, Institució Milá i Fontanals (CSIC). Barcelona.\\
+\years{2008b} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (2008). “Freesound.org, Freesound Radio i Sons de Barcelona" (Freesound.org, Freesound Radio \& Sons de Barcelona"). \emph{Facultat de Belles Arts (Faculty of Fine Arts)}, Universitat de Barcelona. Barcelona.\\
+\years{2008a} \textsc{Panel Member} together with Alsina, A., de Jong, B., Loscos, A. and Roma, G. (September 27, 2008). “Influencia de la tecnología en la evolución de la música y la industria" (Influence of the technology in the evolution of music and industry). \emph{NetAudio}, CCCB. Barcelona. \href{https://www.youtube.com/watch?v=6JlCCvYXrHY}{[video]}\\
+\years{2007}\textsc{Oral Presenter} together with Roma, G. (September 20, 2007). “A Sound Editor with a Tangible Interface". \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
 
 \subsection*{Own Institution}
 \noindent
 
-\years{2017b} \textsc{Oral Presenter}. (June 19, 2017). "Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". \emph{CCW2017: Co-Creation Workshop, ICC 2017}. Atlanta, GA, USA.\\
-\years{2017a} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). "Women in Music Tech 2016--2017". Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
-\years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). "Tangible User Interfaces and Tabletops". \emph{First Annual Women and Music Tech Concert and Reception}, The Garage. Atlanta, GA. USA.\\
-\years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). "Women in Sound." Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
-\years{2016b} \textsc{Oral Presenter}. (February 25, 2016). "Algorithmic Composition: My Personal Journey". Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
-\years{2016a} \textsc{Oral Presenter}. (January 26, 2016). "EarSketch: Computational Music Remixing for All". Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
-\years{2015c} \textsc{Oral Presenter}. (September 3, 2015). "Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2015b} \textsc{Oral Presenter}. (August 27, 2015). "Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech. Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
-\years{2015a} \textsc{Oral Presenter}. (August 24, 2015). "Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GTCMT Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2014} \textsc{Oral Presenter}. (April 9, 2014). "Let's Jam the Reactable: Peer Learning During Musical Improvisation with a Tabletop Tangible Interface". \emph{London Knowledge Lab}. London.\\
-\years{2013} \textsc{Oral Presenter}. (June 2, 2013). "Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2013}, OU. Milton Keynes, UK.\\
-\years{2012} \textsc{Oral Presenter}. (June 12, 2012). "Collaboration on Interactive Tabletops for Music Performance: An Exploratory Study". \emph{CRC PhD Student Conference 2012}, OU. Milton Keynes, UK.\\
-\years{2011b} \textsc{Oral Presenter}. (June 16, 2011). "Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
-\years{2011a} \textsc{Oral Presenter}. (May 17, 2011). "Tabletop Groupware for Music Performance: Design and Evaluation". \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
-\years{2010b} \textsc{Oral Presenter}. (June 8, 2010). "Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
-\years{2010a} \textsc{Oral Presenter}. (May, 2010). "Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.
+\years{2017b} \textsc{Oral Presenter}. (June 19, 2017). “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". \emph{CCW2017: Co-Creation Workshop, ICC 2017}. Atlanta, GA, USA.\\
+\years{2017a} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). “Women in Music Tech 2016--2017". Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
+\years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). “Tangible User Interfaces and Tabletops". \emph{First Annual Women and Music Tech Concert and Reception}, The Garage. Atlanta, GA. USA.\\
+\years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). “Women in Sound." Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
+\years{2016b} \textsc{Oral Presenter}. (February 25, 2016). “Algorithmic Composition: My Personal Journey". Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
+\years{2016a} \textsc{Oral Presenter}. (January 26, 2016). “EarSketch: Computational Music Remixing for All". Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
+\years{2015c} \textsc{Oral Presenter}. (September 3, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
+\years{2015b} \textsc{Oral Presenter}. (August 27, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech. Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
+\years{2015a} \textsc{Oral Presenter}. (August 24, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GTCMT Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\ 
+\years{2014} \textsc{Oral Presenter}. (April 9, 2014). “Let's Jam the Reactable: Peer Learning During Musical Improvisation with a Tabletop Tangible Interface". \emph{London Knowledge Lab}. London.\\
+\years{2013} \textsc{Oral Presenter}. (June 2, 2013). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2013}, OU. Milton Keynes, UK.\\
+\years{2012} \textsc{Oral Presenter}. (June 12, 2012). “Collaboration on Interactive Tabletops for Music Performance: An Exploratory Study". \emph{CRC PhD Student Conference 2012}, OU. Milton Keynes, UK.\\
+\years{2011b} \textsc{Oral Presenter}. (June 16, 2011). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
+\years{2011a} \textsc{Oral Presenter}. (May 17, 2011). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
+\years{2010b} \textsc{Oral Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
+\years{2010a} \textsc{Oral Presenter}. (May, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.
 
 \section*{Poster Presentations, Demos \& Workshops}
 \noindent
@@ -357,34 +357,34 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Poster Presentations \& Demos}
 \noindent
 
-\years{2017c} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A. and Xambó, A. "Constructing a Conceptual Framework for Collaborative Audiovisual Performance". \emph{ICCC '17}. Atlanta, GA, USA.\\
-\years{2017b} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A., Xambó, A., Magerko, B., Roma, G., Jacob, M., Bhanu, N., and Freeman, J. "TuneTable: A Tangible Computational Music Installation for Informal Learning". \emph{ICCC '17}. Atlanta, GA, USA.\\
-\years{2017a} \textsc{Poster \& Demo Presenter}. (March 21, 2017). "Experience and Ownership with a Tangible Computational Music Installation for Informal Learning". \emph{TEI '17}. Yokohama, Japan.\\
-\years{2016b} \textsc{Poster \& Demo Presenter}. (August 11, 2016). "Learning to Code Through MIR". \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
-\years{2016a} \textsc{Poster \& Demo Presenter} together with Roma, G. (July 2, 2016). "Do the Buzzer Shake". \emph{ICLI 2016}. Brighton, UK.\\
-\years{2015} \textsc{Poster \& Demo Presenter} together with McKlin, T. (August 14, 2015). "EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". \emph{RESPECT 2015}. Charlotte, NC. USA.\\
-\years{2014} \textsc{Poster Presenter} together with Price, S. (April 29, 2014). "Towards an Integrated Methodological Framework for Understanding Embodiment in HCI". \emph{CHI '14}. Toronto, ON. \href{https://www.youtube.com/watch?v=pRDHuCUltwo}{[video]}\\
+\years{2017c} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A. and Xambó, A. “Constructing a Conceptual Framework for Collaborative Audiovisual Performance". \emph{ICCC '17}. Atlanta, GA, USA.\\
+\years{2017b} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A., Xambó, A., Magerko, B., Roma, G., Jacob, M., Bhanu, N., and Freeman, J. “TuneTable: A Tangible Computational Music Installation for Informal Learning". \emph{ICCC '17}. Atlanta, GA, USA.\\
+\years{2017a} \textsc{Poster \& Demo Presenter}. (March 21, 2017). “Experience and Ownership with a Tangible Computational Music Installation for Informal Learning". \emph{TEI '17}. Yokohama, Japan.\\
+\years{2016b} \textsc{Poster \& Demo Presenter}. (August 11, 2016). “Learning to Code Through MIR". \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
+\years{2016a} \textsc{Poster \& Demo Presenter} together with Roma, G. (July 2, 2016). “Do the Buzzer Shake". \emph{ICLI 2016}. Brighton, UK.\\
+\years{2015} \textsc{Poster \& Demo Presenter} together with McKlin, T. (August 14, 2015). “EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". \emph{RESPECT 2015}. Charlotte, NC. USA.\\
+\years{2014} \textsc{Poster Presenter} together with Price, S. (April 29, 2014). “Towards an Integrated Methodological Framework for Understanding Embodiment in HCI". \emph{CHI '14}. Toronto, ON. \href{https://www.youtube.com/watch?v=pRDHuCUltwo}{[video]}\\
 \years{2012} \textsc{Demo Presenter}. (January 10, 2012). "Tangible Additive Sound Synthesis (TASS)". \emph{Welcome to the French Embassy}, OU. Milton Keynes, UK.\\
-\years{2011d} \textsc{Poster Presenter}. (June 17, 2011). "Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
-\years{2011c} \textsc{Poster \& Demo Presenter} together with Milne, A. J. (May 30, 2011). "Hex Player — A Virtual Musical Controller". \emph{NIME '11}. Oslo, Norway.\\
-\years{2011b} \textsc{Poster Presenter}. (March 8, 2011). "Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.\\
-\years{2011a} \textsc{Poster Presenter}. (January 25, 2011) "TOUCHtr4ck: Democratic Collaborative Music". \emph{TEI '11}. Funchal, Madeira.\\
-\years{2010} \textsc{Poster Presenter}. (June 8, 2010). "Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
-\years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). "Interfaces for Sketching Musical Compositions". \emph{SMC Summer School 2008}. Genoa, Italy.\\
-\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008) "A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.
+\years{2011d} \textsc{Poster Presenter}. (June 17, 2011). “Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
+\years{2011c} \textsc{Poster \& Demo Presenter} together with Milne, A. J. (May 30, 2011). “Hex Player — A Virtual Musical Controller". \emph{NIME '11}. Oslo, Norway.\\
+\years{2011b} \textsc{Poster Presenter}. (March 8, 2011). “Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.\\
+\years{2011a} \textsc{Poster Presenter}. (January 25, 2011) “TOUCHtr4ck: Democratic Collaborative Music". \emph{TEI '11}. Funchal, Madeira.\\
+\years{2010} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
+\years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). “Interfaces for Sketching Musical Compositions". \emph{SMC Summer School 2008}. Genoa, Italy.\\
+\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.
 
 
 \subsection*{Workshops}
 \noindent
 
-\years{2017} \textbf{Xambó, A.} (Forthcoming in October 2017). "Audiovisual Creative Coding Workshop for Girls using P5.js and P5.sound". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
-\years{2013} \textbf{Xambó, A.} (May 2, 2013). "Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
-\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). "Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
+\years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
+\years{2013} \textbf{Xambó, A.} (May 2, 2013). “Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
+\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
 
 \subsection*{Webinars}
 \noindent
 
-\years{2016} \textbf{Xambó, A.} (October 28, 2016). "Debugging with EarSketch". GTCMT, Georgia Tech, Atlanta, GA, USA.
+\years{2016} \textbf{Xambó, A.} (October 28, 2016). “Debugging with EarSketch". GTCMT, Georgia Tech, Atlanta, GA, USA.
 
 \section*{Discography}
 \noindent
@@ -405,21 +405,21 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Participation in Compilations}
 \noindent
 
-\years{2016}peterMann. (2016). Go wild y'all (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2015}peterMann. (2015). ldnsktch01 (1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2010}peterMann. (2010). init11 (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.
+\years{2016}peterMann. (2016). “Go wild y'all" (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
+\years{2015}peterMann. (2015). “ldnsktch01" (1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
+\years{2010}peterMann. (2010). “init11" (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.
 
 \subsection*{Broadcasting}
 \noindent
 
-\years{2013f}peterMann's og02. (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
-\years{2013e}peterMann's og01, og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
-\years{2013d}peterMann's og01. (March 28, 2013). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
-\years{2013c}peterMann's og01 \& og10. (March 2, 2013). Onda Sonora.\\
+\years{2013f}peterMann's “og02". (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
+\years{2013e}peterMann's “og01", og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
+\years{2013d}peterMann's “og01". (March 28, 2013). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
+\years{2013c}peterMann's “og01" \& “og10". (March 2, 2013). Onda Sonora.\\
 \years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera.\\
-\years{2013a}peterMann's og02. (February 2, 2013). Störung Radio 127 on ScannerFM.\\
-\years{2010b}peterMann's init 10, init 11 \& init 12. (December 18, 2010). Onda Sonora.\\
-\years{2010a}peterMann's init 2. (April 12, 2010). Sismógrafo.
+\years{2013a}peterMann's “og02". (February 2, 2013). Störung Radio 127 on ScannerFM.\\
+\years{2010b}peterMann's “init 10", “init 11" \& “init 12". (December 18, 2010). Onda Sonora.\\
+\years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.
 
 \section*{Selected Performances}
 \noindent
@@ -436,10 +436,10 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). Transmusicking I. Audio Mostly 2017.\\
-\years{2017c}Xambó, A. Roma, G. (August 21, 2017). Hyperconnected Action Painting. Web Audio Conference 2017.\\
-\years{2017}Anna Weisling and Anna Xambó. (May 16, 2017). Beacon. \emph{NIME}. Stengade. Copenhagen, Denmark.\\
-\years{2017}Anna Weisling and Anna Xambó. (February 11, 2017). Beacon. \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
+\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". Audio Mostly 2017.\\
+\years{2017c}Xambó, A. Roma, G. (August 21, 2017). “Hyperconnected Action Painting". Web Audio Conference 2017.\\
+\years{2017}Anna Weisling and Anna Xambó. (May 16, 2017). “Beacon". \emph{NIME}. Stengade. Copenhagen, Denmark.\\
+\years{2017}Anna Weisling and Anna Xambó. (February 11, 2017). “Beacon". \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
 \years{2012}pulso (Gerard Roma and Anna Xambó). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Gerard Roma and Anna Xambó). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
 \years{2002}b4ng (Gerard Roma, Celia Brugos, Clarens, Anna Xambó). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
@@ -450,15 +450,15 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Awarded Music Hacks}
 \noindent
 
-\years{2014}crowdj. \emph{Music Hack Day}. Barcelona, Spain.\\ 
+\years{2014}“crowdj". \emph{Music Hack Day}. Barcelona, Spain.\\ 
 Prize: Rdio prize.\\
 Role: Concept, part of the implementation and user interface design.\\
 Collaborator: Gerard Roma.\\
-\years{2012b}Soundscape Turntablism. \emph{Music Hack Day}. Barcelona, Spain.\\ 
+\years{2012b}“Soundscape Turntablism". \emph{Music Hack Day}. Barcelona, Spain.\\ 
 Prize: Reactable prize, Zvooq prize.\\  
 Role: Concept, part of the implementation and tangible user interface design.\\
 Collaborator: Gerard Roma.\\
-\years{2012a}Soundscape DJ. \emph{Music Tech Fest}. London, UK.\\ 
+\years{2012a}“Soundscape DJ". \emph{Music Tech Fest}. London, UK.\\ 
 Prize: Warp Records prize. \\
 Role: Concept, part of the implementation and tangible user interface design.\\
 Collaborator: Gerard Roma.
@@ -577,13 +577,13 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Concerts Co-Organization}
 \noindent
 
-\years{2017}Noiselets: A Noise Music Microfestival. (January 8, 2017). Freedonia, Barcelona.\\
-\years{2016c}The First Annual Women in Music Tech: Concert and Reception. (November 2, 2016). The Garage. Atlanta, GA, USA.\\
-\years{2016b}Audience device participation. (April 5, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016a}Live coding and the audiovisual web. (April 4, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2013b}Perspectives on multichannel live coding. (October 4, 2013). PHONOS. Sala Polivalent, UPF. Barcelona.\\
-\years{2013a}Live Coding Sessions II. (March 22, 2013). Niu. Barcelona.\\
-\years{2012}Live Coding Sessions. (March 15, 2012). Niu. Barcelona.
+\years{2017}“Noiselets: A Noise Music Microfestival". (January 8, 2017). Freedonia, Barcelona.\\
+\years{2016c}“The First Annual Women in Music Tech: Concert and Reception". (November 2, 2016). The Garage. Atlanta, GA, USA.\\
+\years{2016b}“Audience device participation". (April 5, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2016a}“Live coding and the audiovisual web". (April 4, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2013b}“Perspectives on multichannel live coding". (October 4, 2013). PHONOS. Sala Polivalent, UPF. Barcelona.\\
+\years{2013a}“Live Coding Sessions II". (March 22, 2013). Niu. Barcelona.\\
+\years{2012}“Live Coding Sessions". (March 15, 2012). Niu. Barcelona.
 
 \subsection*{Blogging}
 \noindent
@@ -626,9 +626,9 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2012--2016}\emph{ACM Designing Interactive Systems} (2012, 2016).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
-\years{2011--2016}\emph{ACM New Interfaces for Musical Expression} (2011--2017).\\
-\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2017).\\
-\years{2012--2017}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2017).\\
+\years{2011--2016}\emph{New Interfaces for Musical Expression} (2011--2017).\\
+\years{2015--2018}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2018).\\
+\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
 \years{2017}\emph{International Computer Music Conference -- ICMC Music} (2017).\\
 \years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
