--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -83,15 +83,13 @@ bookmarks, colorlinks, breaklinks,
 \begin{document}
 {\Huge Anna Xambó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[1cm]
-Center for Music Technology\\
-School of Music\\
-College of Design\\
-Georgia Institute of Technology\\
-840 McMillan Street\\
-Atlanta, GA  \texttt{30332--0456}
+Center for Digital Music\\
+School of Electronic Engineering and Computer Science\\
+Queen Mary University of London\\
+Mile End Road, London \texttt{E1 4NS}
 USA\\[.2cm]
-Phone: \texttt{(+1) 706-239-0127}\\
-email: \href{mailto:anna.xambo@gatech.edu}{anna.xambo@gatech.edu}\\
+Phone: \texttt{(+44) (0) 737-879-6645}\\
+email: \href{mailto:a.xambo@qmul.ac.uk}{a.xambo@qmul.ac.uk}\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
 
 %%\hrule
@@ -259,7 +257,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
-\years{2016}\textbf{Xambó, A.} (forthcoming), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London.\\
+\years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
 \subsection*{Journal Articles}
@@ -290,7 +288,8 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
-\years{2017}Xambó, A., Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
+\years{2017}\textbf{Xambó, A.}, Ceriani, M., Stolfi, A., Turchet, L., Barthet, M., Fazekas, G., Goudarzi, V. (submitted). “Audio and HCI in The Digital Age: Engaging with the Internet of Sounds".\\
+\years{2017}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven Musical Language to Live Coding: A Case Study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
 \years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
@@ -567,7 +566,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \section*{Mentoring}
 \noindent
 
-\years{05/2016--present}As a Co-Chair of the student-led organization \emph{Women in Music Tech} I have been mentoring and advising the female graduate students of this organization, including the Chair of the organization, Léa Ikkache, and the Editor-in-Chief of the newsletter Amruta Vidwans. I have also mentored female newcomers to the organization, such as Jyoti Narang.\\
+\years{05/2016--2017}As a Co-Chair of the student-led organization \emph{Women in Music Tech} I have been mentoring and advising the female graduate students of this organization, including the Chair of the organization, Léa Ikkache, and the Editor-in-Chief of the newsletter Amruta Vidwans. I have also mentored female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
 
@@ -694,7 +693,8 @@ Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version control systems: CVS, Git, Subversion.\\
 Music Apps: Cubase, Live, Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
 Video analysis Apps: ELAN, VCode.\\
-Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.
+Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.\\
+Hardware: Arduino, Bela.
 
 %\vspace{1cm}
 \vfill{}
