updates late November 2017

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -86,8 +86,7 @@ bookmarks, colorlinks, breaklinks,
 Center for Digital Music\\
 School of Electronic Engineering and Computer Science\\
 Queen Mary University of London\\
-Mile End Road, London \texttt{E1 4NS}
-USA\\[.2cm]
+Mile End Road, London \texttt{E1 4NS}, UK\\[.2cm]
 Phone: \texttt{(+44) (0) 737-879-6645}\\
 email: \href{mailto:a.xambo@qmul.ac.uk}{a.xambo@qmul.ac.uk}\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
@@ -195,7 +194,7 @@ Total Dollar Amount: \$2,517,690.00
 
 \subsection*{Fundraiser}
 
-\years{05/2016--present}\textsc{Women in Music Tech} \\
+\years{05/2016--05/2017}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\
 Total Fundraised Dollar Amount: \$11,450\\[.1cm]
 \years{08/2016--05/2017}\textbf{2016-2017 Academic Year}\\
@@ -208,7 +207,7 @@ Funding body: ADVANCE program, Georgia Tech. \\
 Total Dollar Amount: \$1,000\\[.1cm]
 Funding body: Women's Resource Center, Georgia Tech. \\
 Total Dollar Amount: \$250\\[.1cm]
-\years{08/2016--11/2016}\textbf{Spring 2017 Actions}\\
+\years{01/2017--05/2017}\textbf{Spring 2017 Actions}\\
 Funding body: School of Music, Georgia Tech. \\
 Total Dollar Amount: \$2,400\\[.1cm]
 Funding body: College of Design Council Diversity, Georgia Tech. \\
@@ -288,8 +287,9 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
-\years{2017}\textbf{Xambó, A.}, Ceriani, M., Stolfi, A., Turchet, L., Barthet, M., Fazekas, G., Goudarzi, V. (submitted). “Audio and HCI in The Digital Age: Engaging with the Internet of Sounds".\\
-\years{2017}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
+\years{2017c}Weisling, A., \textbf{Xambó, A.} (submitted). “Beacon: Exploring Physicality in Digital Performance".\\
+\years{2017b}\textbf{Xambó, A.}, Ceriani, M., Stolfi, A., Turchet, L., Barthet, M., Fazekas, G., Goudarzi, V. (submitted). “Audio and HCI in The Digital Age: Engaging with the Internet of Sounds".\\
+\years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven Musical Language to Live Coding: A Case Study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
 \years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
@@ -435,13 +435,14 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". Audio Mostly 2017.\\
-\years{2017c}Xambó, A. Roma, G. (August 21, 2017). “Hyperconnected Action Painting". Web Audio Conference 2017.\\
-\years{2017}Anna Weisling and Anna Xambó. (May 16, 2017). “Beacon". \emph{NIME}. Stengade. Copenhagen, Denmark.\\
-\years{2017}Anna Weisling and Anna Xambó. (February 11, 2017). “Beacon". \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
-\years{2012}pulso (Gerard Roma and Anna Xambó). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
-\years{2004}pulso (Gerard Roma and Anna Xambó). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
-\years{2002}b4ng (Gerard Roma, Celia Brugos, Clarens, Anna Xambó). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
+\years{2017e}Brown, N., Stolfi, A., Schroeder, F., Chudy, M., Pase, T., Wilkie, S., \textbf{Xambó, A.}, Ikkache, L., Weisling, A. (submitted). “Transmusicking II". \\
+\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". Audio Mostly 2017.\\
+\years{2017c}\textbf{Xambó, A.}, Roma, G. (August 21, 2017). “Hyperconnected Action Painting". Web Audio Conference 2017.\\
+\years{2017}Weisling, A., \textbf{Xambó, A.} (May 16, 2017). “Beacon". \emph{NIME}. Stengade. Copenhagen, Denmark.\\
+\years{2017}Weisling, A., \textbf{Xambó, A.} (February 11, 2017). “Beacon". \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
+\years{2012}pulso (Roma, G., \textbf{Xambó, A.}). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
+\years{2004}pulso (Roma, G., \textbf{Xambó, A.}). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
+\years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, C., Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
 
 \section*{Other Creative Products}
 \noindent
@@ -640,6 +641,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
+\years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society.\\
 \years{2016a}\emph{Qualitative Research}. Sage Publications.
 
 \subsection*{Jury Member}
@@ -663,7 +665,7 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 
 \subsection*{Entrepreneurship}
 \noindent
-\years{05/2016--present}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
+\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
 Co-Founder and Co-Chair of \emph{Women in Music Tech}, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
 \years{02/2004--06/2010}\emph{Nodular Soft}, Barcelona. \\
 Co-Founder of a freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.
