--- a/Statements/Xambo.ResearchStatement.tex
+++ b/Statements/Xambo.ResearchStatement.tex
@@ -108,34 +108,34 @@ An interesting characteristic of these novel interfaces is their potential suppo
 \subsection*{STEM and Education}
 
 \begin{itemize}
-\item \textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). Learning to code through MIR. In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.
-\item \textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) “Experience and ownership with a tangible computational music installation for informal learning”. In Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI ’17). Yokohama, Japan. 
-\item Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). \emph{EarSketch: a STEAM approach to broadening participation in computer science principles}. In Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15). Charlotte, NC. pp. 109-110.
+\item \textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). Learning to Code through MIR. In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.
+\item \textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) “Experience and Ownership with a Tangible Computational Music Installation for Informal Learning”. In Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI ’17). Yokohama, Japan. 
+\item Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). \emph{EarSketch: a STEAM Approach to Broadening Participation in Computer Science Principles}. In Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15). Charlotte, NC. pp. 109-110.
 \end{itemize}
 
 \subsection*{Computer-Supported Collaborative Work}
 
 \begin{itemize}
-\item \textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). Challenges and new directions for collaborative live coding in the classroom. In \emph{ICLI 2016}. Brighton, UK.
+\item \textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). Challenges and New Directions for Collaborative Live Coding in the Classroom. In \emph{ICLI 2016}. Brighton, UK.
 \item \textbf{Xambó, A.} (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}. Thesis. The Open University.
-\item \textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation”. In Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME ’14). London. pp. 249–252.
-\item \textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language”. In Proceedings of the International Computer Music Conference (ICMC ’11). Huddersffeld, UK. pp. 403–406.
+\item \textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation”. In Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME ’14). London. pp. 249–252.
+\item \textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch Interaction Principles for Collaborative Real-time Music Activities: Towards a Pattern Language”. In Proceedings of the International Computer Music Conference (ICMC ’11). Huddersffeld, UK. pp. 403–406.
 \end{itemize}
 
 \subsection*{Interaction Design}
 
 \begin{itemize}
-\item \textbf{Xambó, A.} (forthcoming), ``Embodied music interaction: creative design synergies between music performance and HCI''. In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London.
-\item \textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an integrated methodological framework for understanding embodiment in HCI”. In Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI ’14). Toronto. pp. 1411--1416.
-\item Roma, G. and \textbf{Xambó, A.} (2008). “A tabletop waveform editor for live performance”. In Proceedings of the International Conference on New Interfaces for Musical Expression (NIME ’08). Genoa, Italy.
+\item \textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.
+\item \textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an Integrated Methodological Framework for Understanding Embodiment in HCI”. In Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI ’14). Toronto. pp. 1411--1416.
+\item Roma, G. and \textbf{Xambó, A.} (2008). “A Tabletop Waveform Editor for Live Performance”. In Proceedings of the International Conference on New Interfaces for Musical Expression (NIME ’08). Genoa, Italy.
 \item \textbf{Xambó, A.} (2008). \emph{Interfaces for Sketching Musical Compositions}. Unpublished master’s thesis. UPF.
 \end{itemize}
 
 \subsection*{Intelligent Systems}
 
 \begin{itemize}
-\item Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). Semantic audio content-based music recommendation and visualization based on user preference examples. \emph{Information Processing \& Management}, 49(1), pp. 13-33.
-\item Haro, M.; \textbf{Xambó, A.}; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). The Musical Avatar: a visualization of musical preferences by means of audio content description. In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.
+\item Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). Semantic Audio Content-based Music Recommendation and Visualization Based on User Preference Examples. \emph{Information Processing \& Management}, 49(1), pp. 13-33.
+\item Haro, M.; \textbf{Xambó, A.}; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). The Musical Avatar: A Visualization of Musical Preferences by Means of Audio Content Description. In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.
 \end{itemize}
 
 %\vspace{1cm}
