updates late January 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -287,8 +287,8 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
-\years{2017c}Weisling, A., \textbf{Xambó, A.} (submitted). “Beacon: Exploring Physicality in Digital Performance".\\
-\years{2017b}\textbf{Xambó, A.}, Ceriani, M., Stolfi, A., Turchet, L., Barthet, M., Fazekas, G., Goudarzi, V. (submitted). “Audio and HCI in The Digital Age: Engaging with the Internet of Sounds".\\
+\years{2018b}Skach, S., \textbf{Xambó, A.}, Turchet, L., Stolfi, A., Stewart, B., Barthet, M. (accepted). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". In TEI 2018 (work-in-progress track).\\
+\years{2018a}Weisling, A., \textbf{Xambó, A.} (accepted). “Beacon: Exploring Physicality in Digital Performance". In TEI 2018 (artistic track).\\
 \years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven Musical Language to Live Coding: A Case Study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
@@ -404,6 +404,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Participation in Compilations}
 \noindent
 
+\years{2018}peterMann. (2018). “n02-petermann" (11 min 10 sec). in \emph{Noiselets} [MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2016}peterMann. (2016). “Go wild y'all" (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
 \years{2015}peterMann. (2015). “ldnsktch01" (1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
 \years{2010}peterMann. (2010). “init11" (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.
@@ -435,7 +436,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Collaborative Performances}
 \noindent
-\years{2017e}Brown, N., Stolfi, A., Schroeder, F., Chudy, M., Pase, T., Wilkie, S., \textbf{Xambó, A.}, Ikkache, L., Weisling, A. (submitted). “Transmusicking II". \\
+%\years{2017e}Brown, N., Stolfi, A., Schroeder, F., Chudy, M., Pase, T., Wilkie, S., \textbf{Xambó, A.}, Ikkache, L., Weisling, A. (submitted). “Transmusicking II". \\
 \years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". Audio Mostly 2017.\\
 \years{2017c}\textbf{Xambó, A.}, Roma, G. (August 21, 2017). “Hyperconnected Action Painting". Web Audio Conference 2017.\\
 \years{2017}Weisling, A., \textbf{Xambó, A.} (May 16, 2017). “Beacon". \emph{NIME}. Stengade. Copenhagen, Denmark.\\
@@ -624,7 +625,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \noindent
 
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
-\years{2012--2016}\emph{ACM Designing Interactive Systems} (2012, 2016).\\
+\years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
+\years{2018} \emph{International Conference of the Learning Sciences (ICLS)} (2018)\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2011--2016}\emph{New Interfaces for Musical Expression} (2011--2017).\\
 \years{2015--2018}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2018).\\
@@ -693,7 +695,7 @@ Operating Systems: OS X, Windows and Linux desktop (Ubuntu).\\
 Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, Web Audio, XML.\\
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version control systems: CVS, Git, Subversion.\\
-Music Apps: Cubase, Live, Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
+Music Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
 Video analysis Apps: ELAN, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.\\
 Hardware: Arduino, Bela.
